--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Healthvibess</title>
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon"  href= "assets/images/c7abe62f-df14-49cb-8ac5-df8639a65336_removalai_preview.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/animate-3.7.0.css">
-    <link rel="stylesheet" href="assets/css/font-awesome-4.7.0.min.css">
-    <link rel="stylesheet" href="assets/css/bootstrap-4.1.3.min.css">
-    <link rel="stylesheet" href="assets/css/owl-carousel.min.css">
-    <link rel="stylesheet" href="assets/css/jquery.datetimepicker.min.css">
-    <link rel="stylesheet" href="assets/css/linearicons.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon"  href= "images/c7abe62f-df14-49cb-8ac5-df8639a65336_removalai_preview.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/animate-3.7.0.css">
+    <link rel="stylesheet" href="css/font-awesome-4.7.0.min.css">
+    <link rel="stylesheet" href="css/bootstrap-4.1.3.min.css">
+    <link rel="stylesheet" href="css/owl-carousel.min.css">
+    <link rel="stylesheet" href="css/jquery.datetimepicker.min.css">
+    <link rel="stylesheet" href="css/linearicons.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="main.css">
           
     <link rel="stylesheet" href="index.css">
@@ -47,7 +47,7 @@
         <!-- Logo -->
         <div id="logo">
           <a href="index.html">
-            <img class="navbar-logo" src="assets/images/c7abe62f-df14-49cb-8ac5-df8639a65336_removalai_preview.png" alt="HealthVibess Logo" />
+            <img class="navbar-logo" src="images/c7abe62f-df14-49cb-8ac5-df8639a65336_removalai_preview.png" alt="HealthVibess Logo" />
           </a>
         </div>
 
@@ -259,14 +259,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 
     <!-- Javascript -->
-    <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
-	<script src="assets/js/vendor/bootstrap-4.1.3.min.js"></script>
-    <script src="assets/js/vendor/wow.min.js"></script>
-    <script src="assets/js/vendor/owl-carousel.min.js"></script>
-    <script src="assets/js/vendor/jquery.datetimepicker.full.min.js"></script>
-    <script src="assets/js/vendor/jquery.nice-select.min.js"></script>
-    <script src="assets/js/vendor/superfish.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="js/vendor/jquery-2.2.4.min.js"></script>
+	<script src="js/vendor/bootstrap-4.1.3.min.js"></script>
+    <script src="js/vendor/wow.min.js"></script>
+    <script src="js/vendor/owl-carousel.min.js"></script>
+    <script src="js/vendor/jquery.datetimepicker.full.min.js"></script>
+    <script src="js/vendor/jquery.nice-select.min.js"></script>
+    <script src="js/vendor/superfish.min.js"></script>
+    <script src="js/main.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
